apps/evcc/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: evcc
  namespace: evcc
spec:
  hostnames:
    - evcc.${GATEWAY_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium
      namespace: gateway-default
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: evcc
          port: 8887
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      matches:
        - path:
            type: PathPrefix
            value: /ocpp
    - backendRefs:
        - group: ""
          kind: Service
          name: evcc
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
